# evolution

./: .gitignore  ChangeLog  ChangeLog.im  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac  configure.in  index.html  params.json  project.config
a11y/: ChangeLog  Makefile.am  Makefile.in  ea-factory.h  init.c
a11y/calendar/: Makefile.am  ea-cal-view-event.c  ea-calendar.c  ea-calendar.h  ea-day-view-event-factory.c  ea-day-view-event-factory.h  ea-day-view-event.c  ea-day-view-event.h  ea-day-view.c  ea-day-view.h  ea-gnome-calendar.c  ea-gnome-calendar.h
a11y/e-text/: gal-a11y-e-text.c
addressbook/: .gitignore  ChangeLog  Makefile.am  Makefile.in
addressbook/backend/ebook/: Makefile.am  e-book-async.c  e-book-async.h  e-book-listener.c  e-book-listener.h  e-book-query.c  e-book-query.h  e-book-types.h  e-book-util.c  e-book-util.h  e-book-view-listener.c  e-book-view-listener.h  e-book-view.c  e-book-view.h  e-book.c  e-book.h  e-card-compare.c  e-card-simple.c  e-card-simple.h  e-card.c  e-card.h  e-contact.c  e-contact.h  e-destination.c  e-destination.h  e-vcard.c  e-vcard.h  test-card.c  test-ebook.c
addressbook/backend/ebook/tests/ebook/: .cvsignore  Makefile.am  test-changes.c  test-ebook.c
addressbook/backend/ebook/tests/vcard/: Makefile.am
addressbook/gui/widgets/: .cvsignore  .gitignore  Makefile.am  Makefile.in  e-addressbook-model.c  e-addressbook-model.h  e-addressbook-reflow-adapter.c  e-addressbook-reflow-adapter.h  e-addressbook-table-adapter.c  e-addressbook-treeview-adapter.c  e-addressbook-util.c  e-addressbook-util.h  e-addressbook-view.c  e-addressbook-view.etspec  e-addressbook-view.h  e-minicard-view-widget.c  e-minicard-view.c  e-minicard.c  eab-contact-display.c  eab-contact-display.h  eab-contact-formatter.c  eab-gui-util.c  eab-gui-util.h  eab-minicard-view.c  eab-minicard-view.h  eab-popup-control.c  eab-popup-control.h  eab-vcard-control.c  gal-view-minicard.c  gal-view-minicard.h  gen-view-etspec.c
addressbook/util/: .gitignore  Makefile.am  Makefile.in  eab-book-util.c  eab-book-util.h
art/: Makefile.am  Makefile.in
calendar/: .gitignore  ChangeLog  Makefile.am  Makefile.in  backend.c  backend.h  calendar.c  calendar.h  calserv.h  eventedit.c  frontend.c  gncal-day-panel.c  gncal-todo.c  gnome-cal.c  gui-alarms.c  main.c  net-parse.c  net-parse.h  prop.c  quick-view.c  server-auth.c  server-commands.c  server-io.c  server-main.c  server-test.in  server-utils.c  server.c
camel/providers/groupwise/: Makefile.am  camel-groupwise-folder.c  camel-groupwise-store-summary.c  camel-groupwise-store.c  camel-groupwise-summary.h  camel-groupwise-transport.c
capplet/: Makefile.in
composer/: .gitignore  ChangeLog  Makefile.am  Makefile.in  e-composer-actions.c  e-composer-actions.h  e-composer-activity.c  e-composer-autosave.c  e-composer-header-table.c  e-composer-header-table.h  e-composer-header.c  e-composer-private.c  e-composer-private.h  e-composer-spell-header.c  e-composer-spell-header.h  e-msg-composer-attachment-bar.c  e-msg-composer-attachment.c  e-msg-composer-hdrs.c  e-msg-composer-select-file.c  e-msg-composer.c  e-msg-composer.h
data/: .gitignore  Makefile.am  Makefile.in  default.css  org.gnome.evolution.mail.gschema.xml.in  webview.css
doc/: Makefile.in
e-util/: .gitignore  ChangeLog  Makefile.am  Makefile.in  e-account.c  e-account.h  e-config.c  e-config.h  e-editor-actions.c  e-editor-dialog.c  e-editor-hrule-dialog.c  e-editor-link-dialog.c  e-editor-replace-dialog.c  e-editor-selection.c  e-editor-selection.h  e-editor-spell-check-dialog.c  e-editor-widget.c  e-editor-widget.h  e-editor.c  e-event.c  e-event.h  e-focus-tracker.c  e-html-editor-actions.c  e-html-editor-cell-dialog.c  e-html-editor-image-dialog.c  e-html-editor-replace-dialog.c  e-html-editor-selection.c  e-html-editor-table-dialog.c  e-html-editor-view.c  e-html-editor-view.h  e-html-editor.c  e-import.c  e-import.h  e-mail-signature-editor.c  e-mail-signature-editor.h  e-mail-signature-manager.c  e-mail-signature-preview.c  e-menu.c  e-menu.h  e-misc-utils.c  (+21 more)
em-format/: .em-format-quote.c.kate-swp  .gitignore  Makefile.am  Makefile.in  e-mail-formatter-enums.h  e-mail-formatter-headers.c  e-mail-formatter-quote-attachment.c  e-mail-formatter-quote-text-html.c  e-mail-formatter-quote-text-plain.c  e-mail-formatter-quote.c  e-mail-formatter.c  e-mail-formatter.h  em-format-quote.c  em-format-quote.h  em-format.c  em-format.h  em-part.c  em-part.h  em-stripsig-filter.c  em-stripsig-filter.h
filter/: ChangeLog  Makefile.in  filter-driver.c  filter-driver.h  filter-editor.c  filter-editor.h  filter-folder.c  filter-rule.c
help/: .gitignore  Makefile.in
im/: .cvsignore  ChangeLog  Makefile.am  Messenger.idl
im/messenger/: .cvsignore  ChangeLog  Makefile.am  e-messenger-identity.c  e-messenger-identity.h  e-messenger-listener.c  e-messenger-listener.h  e-messenger-types.c  e-messenger-types.h  e-messenger.c  e-messenger.h
im/messenger/tests/: .cvsignore  ChangeLog  Makefile.am  test-e-messenger-identity.c  test-e-messenger-signon-signoff.c
im/pms/: .cvsignore  ChangeLog  GNOME_Evolution_Messenger_PMS.oaf  Makefile.am  aol-toc-backend.c  aol-toc-backend.h  e-messenger-backend-dispatcher.c  e-messenger-backend-dispatcher.h  e-messenger-backend-factory.c  e-messenger-backend.c  e-messenger-backend.h  libtoc.c  libtoc.h  test-backend.c  test-pms.c
libart_lgpl/: Makefile.in
libemail-engine/: .gitignore  Makefile.am  Makefile.in
libgnomecanvas/: .gitignore  Makefile.am  Makefile.in  gnome-canvas-text.c  gnome-canvas-widget.c  gnome-canvas.c
libibex/: ChangeLog  Makefile.am  block.c  block.h  disktail.c  hash.c  ibex_block.c  ibex_internal.h  index.h  wordindex.c
libical/: ChangeLog
libversit/: vcc.h  vcc.y
m4/: Makefile.in
mail/: .gitignore  ChangeLog  GNOME_Evolution_Mail.oaf.in  GNOME_Evolution_Mail.server.in.in  Makefile.am  Makefile.in  camel-folder-remote-impl.c  camel-folder-remote.c  (+176 more)
plugins/dbus-ipc-events/: Makefile.am  dbus-handler.c  org-gnome-evolution-dbus-ipc-events.eplug.xml
(+784 files in other folders)
